operations/canary-with-istio/canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: spring-boot-rest
spec:
  replicas: 10
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: spring-boot-rest
  template:
    metadata:
      labels:
        app: spring-boot-rest
    spec:
      containers:
      - name: spring-boot-rest
        image: smartkuk/spring-boot-rest:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    canary:
      canaryService: spring-boot-rest-canary
      stableService: spring-boot-rest-stable
      trafficRouting:
        istio:
          virtualService: 
            name: spring-boot-rest
            routes:
            - primary
          destinationRule:
            name: spring-boot-rest
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
      - setWeight: 10
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-stable
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spring-boot-rest
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-canary
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spring-boot-rest
